--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
 rootProject.name = "calorie-tracker"
 include ":app"
 include ":core"
+include ":core-ui"
 
 include ":onboarding"
 include ":onboarding:domain"
