--- a/tracker/data/src/main/AndroidManifest.xml
+++ b/tracker/data/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="uz.javokhirdev.calorytracker.tracker.data" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="uz.javokhirdev.calorytracker.tracker.data">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+</manifest>
